--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+      <script src="vrinda1.html"></script>
+    </head>
 <body>
-  <script src="vrinda1.html"></script>
 </body>
 </html>
